[project]
name = "YNABMemo"
dynamic = ["version"]
description = "YNABMemo - A program to annotate YNAB transactions with Amazon order info "
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
dependencies = [
    "loguru>=0.7.3",
    "pydantic[email]>=2.11.2",
    "pydantic-settings>=2.8.1",
    "rich>=14.0.0",
    "ynab>=1.3.1",
    "typer>=0.15.2",
    "pydantic-core>=2.33.1",
    "furl>=2.1.4",
    "requests>=2.30.0",
    "cache-decorator>=2.2.0",
    "amazon-orders>=4.0.7,<5.0.0",
    "attrmagic",
]

[project.optional-dependencies]
ai = [
    "openai>=1.12.0", # OpenAI Python client for AI summarization
]

[project.urls]
Repository = "https://github.com/WoosterTech/YNABMemo"
Issues = "https://github.com/WoosterTech/YNABMemo/issues"

[tool.hatch.version]
path = "src/ynabmemo/__init__.py"

# [project.scripts]
# yna = "ynamazon.cli.cli:cli"

[dependency-groups]
dev = [
    "basedpyright>=1.29.2",
    "deptry>=0.23.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.4",
    "types-requests>=2.32.0.20250328",
]
test = [
    "faker>=37.1.0",
    "polyfactory>=2.20.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-sugar>=1.0.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
python_files = ["test_*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
attrmagic = { git = "https://github.com/WoosterTech/AttrMagic.git" }
